--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   IS_TAG: ${{ startsWith(github.ref, 'refs/tags/') }}
-  IS_PR: ${{ github.event_name != 'pull_request' }}
+  IS_PR: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   build:
