--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -77,8 +77,8 @@ jobs:
       - name: Update chart values with new image tag
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         run: |
-          yq eval '.appVersion = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/Chart.yaml
-          yq eval '.version = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/Chart.yaml
+          yq eval '.appVersion = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
+          yq eval '.version = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
 
       - name: Run chart-releaser
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
