--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Docker Image CI
 on:
   push:
     branches: ["main"]
-    tags: ["*.*.*"]
+    tags: ["v*.*.*"]
   pull_request:
     branches: ["main"]
 
@@ -15,11 +15,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
-      attestations: write
-      id-token: write
+    # permissions:
+    #   contents: read
+    #   packages: write
+    #   attestations: write
+    #   id-token: write
 
     steps:
       - uses: actions/checkout@v4
