--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu
 ARG VERSION=dev REVISION=dev
 ENV VERSION=$VERSION REVISION=$REVISION
-CMD [ "sh", "-c", "echo Version is ${VERSION} and revision is ${REVISION}" ] 
+CMD [ "sh", "-c", "echo Version is ${VERSION} and revision is ${REVISION}, something I added in 0.2.0" ] 
