--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu
 ARG VERSION=dev REVISION=dev
 ENV VERSION=$VERSION REVISION=$REVISION
+# comment in 0.0.x
 CMD [ "sh", "-c", "echo Version is ${VERSION} and revision is ${REVISION}" ] 
