--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -93,17 +93,13 @@ jobs:
         with:
           version: v3.8.1
 
-      - name: Install yq
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
-        run: |
-          wget https://github.com/mikefarah/yq/releases/download/v4.34.1/yq_linux_amd64 -O /usr/local/bin/yq
-          chmod +x /usr/local/bin/yq
-      
       - name: Update chart values with new image tag
+        uses: mikefarah/yq@master
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
-        run: |
-          yq eval '.appVersion = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
-          yq eval '.version = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
+        with:
+          cmd: |
+            yq eval '.appVersion = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
+            yq eval '.version = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
 
       - name: Run chart-releaser
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
