--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  SHOULD_RELEASE: ${{ startsWith(github.ref, 'refs/tags/v') }}
+  SHOULD_PUSH: ${{ github.event_name != 'pull_request' }}
 
 jobs:
   build:
@@ -24,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: 'Find the latest release tag (determined by semver sort)'
+      - name: "Find the latest release tag (determined by semver sort)"
         id: latest-semver
         if: startsWith(github.ref, 'refs/tags/v')
         env:
@@ -42,10 +44,15 @@ jobs:
             | awk '{print $2}' | grep -E "${TAG_FILTER}" | head -n 1
           )
           echo "tag-ref=${TAG}" >> "${GITHUB_OUTPUT}"
+          if [ "$TAG" = "${{ github.ref }}" ] ; then
+              echo "is-latest=true" >> "${GITHUB_OUTPUT}"
+          else
+              echo "is-latest=false" >> "${GITHUB_OUTPUT}"
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Login to GitHub Container Registry
         if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v3
@@ -53,59 +60,61 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           flavor: |
-            latest=${{ github.ref == steps.latest-semver.outputs.tag-ref }}
+            latest=${{ steps.latest-semver.outputs.is-latest }}
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
-      
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          push: ${{ github.event_name != 'pull_request' }}
-          sbom: ${{ github.event_name != 'pull_request' }}
+          push: ${{ fromJSON(env.SHOULD_PUSH) }}
+          sbom: ${{ fromJSON(env.SHOULD_PUSH) }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VERSION=${{ startsWith(github.ref, 'refs/tags/') && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}
+            VERSION=${{ fromJSON(env.SHOULD_RELEASE) && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}
             REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
           context: ./my-app
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Configure Git
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Install Helm
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         uses: azure/setup-helm@v1
         with:
           version: v3.8.1
 
       - name: Update chart values with new image tag
         uses: mikefarah/yq@master
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
+        env:
+          VERSION: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
         with:
           cmd: |
-            yq eval '.appVersion = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
-            yq eval '.version = "${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}"' -i charts/my-chart/Chart.yaml
+            yq eval '.appVersion = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
+            yq eval '.version = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
 
       - name: Run chart-releaser
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         uses: helm/chart-releaser-action@v1
         with:
           charts_dir: charts
-          mark_as_latest: ${{ github.ref == steps.latest-semver.outputs.tag-ref }}
+          mark_as_latest: ${{ fromJSON(steps.latest-semver.outputs.is-latest) }}
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
