--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
   SHOULD_RELEASE: ${{ startsWith(github.ref, 'refs/tags/v') }}
   SHOULD_PUSH: ${{ github.event_name != 'pull_request' }}
+  IS_LATEST: false
 
 jobs:
   build:
@@ -45,9 +46,7 @@ jobs:
           )
           echo "tag-ref=${TAG}" >> "${GITHUB_OUTPUT}"
           if [ "$TAG" = "${{ github.ref }}" ] ; then
-              echo "is-latest=true" >> "${GITHUB_OUTPUT}"
-          else
-              echo "is-latest=false" >> "${GITHUB_OUTPUT}"
+              echo "IS_LATEST=true" >> "$GITHUB_ENV"
           fi
 
       - name: Set up Docker Buildx
@@ -66,7 +65,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           flavor: |
-            latest=${{ steps.latest-semver.outputs.is-latest }}
+            latest=${{ env.IS_LATEST }}
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
@@ -115,6 +114,6 @@ jobs:
         uses: helm/chart-releaser-action@v1
         with:
           charts_dir: charts
-          mark_as_latest: ${{ fromJSON(steps.latest-semver.outputs.is-latest) }}
+          mark_as_latest: ${{ fromJSON(env.IS_LATEST) }}
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
