--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -115,9 +115,9 @@ jobs:
           helm package ./my-chart
           curl --output _index.yaml https://felixcicatt.github.io/helm-tag-test/index.yaml
           helm repo index . --url https://felixcicatt.github.io/helm-tag-test --merge ./_index.yaml
-          mkdir /pages
-          mv index.yaml /pages/
-          mv *.tgz /pages/
+          mkdir ../pages
+          mv index.yaml ../pages/
+          mv *.tgz ../pages/
 
       - name: Upload artifact
         if: ${{ fromJSON(env.SHOULD_RELEASE) }}
