--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -124,7 +124,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # directory of your reports
-          path: /pages
+          path: pages
 
   deploy:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
