--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -112,10 +112,12 @@ jobs:
 
       - working-directory: charts
         if: ${{ fromJSON(env.SHOULD_RELEASE) }}
+        env:
+          REPO_URL: ${{ github.event.repository.html_url }}
         run:  |
           helm package ./my-chart
-          curl --output _index.yaml https://felixcicatt.github.io/helm-tag-test/index.yaml
-          helm repo index . --url https://felixcicatt.github.io/helm-tag-test --merge ./_index.yaml
+          curl --output _index.yaml $REPO_URL/index.yaml
+          helm repo index . --url $REPO_URL --merge ./_index.yaml
           mkdir ../pages
           mv index.yaml ../pages/
           mv *.tgz ../pages/
