--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -112,12 +112,10 @@ jobs:
 
       - working-directory: charts
         if: ${{ fromJSON(env.SHOULD_RELEASE) }}
-        env:
-          REPO_URL: ${{ github.event.repository.html_url }}
         run:  |
           helm package ./my-chart
-          curl --output _index.yaml ${REPO_URL}/index.yaml
-          helm repo index . --url ${REPO_URL} --merge ./_index.yaml
+          curl --output _index.yaml ${{ github.event.repository.html_url }}/index.yaml
+          helm repo index . --url ${{ github.event.repository.html_url }} --merge ./_index.yaml
           mkdir ../pages
           mv index.yaml ../pages/
           mv *.tgz ../pages/
