--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -112,13 +112,15 @@ jobs:
             yq eval '.version = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
 
       - name: set github pages url
+        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
           url=$(gh api "repos/$GITHUB_REPOSITORY/pages" --jq '.html_url')
           echo "PAGES_URL=$url" >> "$GITHUB_ENV"
 
-      - working-directory: charts
+      - name: package chart and create new index
+        working-directory: charts
         if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         run: |
           helm package ./my-chart
