--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  SHOULD_RELEASE: ${{ startsWith(github.ref, 'refs/tags/v') }}
   SHOULD_PUSH: ${{ github.event_name != 'pull_request' }}
   IS_LATEST: false
   PAGES_URL:
@@ -25,6 +24,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
 
     steps:
       - uses: actions/checkout@v4
@@ -83,36 +84,43 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VERSION=${{ fromJSON(env.SHOULD_RELEASE) && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}
+            VERSION=${{ startsWith(github.ref, 'refs/tags/v') && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}
             REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
           context: ./my-app
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  release:
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}
+      cancel-in-progress: false
+    steps:
       - name: Configure Git
-        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Install Helm
-        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         uses: azure/setup-helm@v1
         with:
           version: v3.8.1
 
       - name: Update chart values with new image tag
         uses: mikefarah/yq@master
-        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         env:
-          VERSION: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+          VERSION: ${{ needs.build.outputs.version }}
         with:
           cmd: |
             yq eval '.appVersion = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
             yq eval '.version = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
 
       - name: set github pages url
-        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -121,7 +129,6 @@ jobs:
 
       - name: package chart and create new index
         working-directory: charts
-        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         run: |
           helm package ./my-chart
           curl --output _index.yaml ${{env.PAGES_URL}}/index.yaml
@@ -131,20 +138,10 @@ jobs:
           mv *.tgz ../pages/
 
       - name: Upload artifact
-        if: ${{ fromJSON(env.SHOULD_RELEASE) }}
         uses: actions/upload-pages-artifact@v3
         with:
           # directory of your reports
           path: pages
-
-  deploy:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
