--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,9 +13,9 @@ env:
   IMAGE_NAME: ${{ github.repository }}
   SHOULD_PUSH: ${{ github.event_name != 'pull_request' }}
   IS_LATEST: false
-  PAGES_URL:
   REPO_NAME: my-repo
   CHART_NAME: my-chart
+  VERSION:
 
 permissions:
   contents: write
@@ -27,8 +27,6 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
 
     steps:
       - uses: actions/checkout@v4
@@ -79,6 +77,9 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha
 
+      - name: set version in env
+        run: echo "VERSION=${{ startsWith(github.ref, 'refs/tags/v') && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}" >> "$GITHUB_ENV"
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
@@ -87,7 +88,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VERSION=${{ startsWith(github.ref, 'refs/tags/v') && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}
+            VERSION=${{ env.VERSION }}
             REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
           context: ./my-app
           cache-from: type=gha
@@ -102,28 +103,16 @@ jobs:
         run: helm template . --debug
         working-directory: ./charts/my-chart
 
-  release:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.8.1
-
       - name: Update chart values with new image tag
         uses: mikefarah/yq@master
-        env:
-          VERSION: ${{ needs.build.outputs.version }}
         with:
           cmd: |
             yq eval '.appVersion = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
             yq eval '.version = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
-
-      - name: Build and Push the Helm Charts to GitHub Container Registry
-        uses: JimCronqvist/action-helm-chart-repo@master
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+            
+      - name: package chart and create new index
+        working-directory: charts
+        run: |
+          helm package ./${{env.CHART_NAME}}
+          helm registry login ghcr.io/${{ github.repository }} --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+          helm push ${{env.CHART_NAME}}-${{ env.VERSION }}.tgz ghcr.io/${{ github.repository }}
