--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,11 +11,13 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  SHOULD_PUSH: ${{ github.event_name != 'pull_request' }}
+  SHOULD_PUSH: ${{ github.event_name != 'pull_request' && 'true' || '' }}
+  SHOULD_RELEASE: ${{ startsWith(github.ref, 'refs/tags/v') && 'true' || '' }}
   IS_LATEST: false
   REPO_NAME: my-repo
   CHART_NAME: my-chart
   VERSION:
+  REVISION:
 
 permissions:
   contents: write
@@ -33,7 +35,7 @@ jobs:
 
       - name: "Find the latest release tag (determined by semver sort)"
         id: latest-semver
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: ${{ env.SHOULD_RELEASE }}
         env:
           REPO_URL: ${{ github.event.repository.html_url }}
           # Filter for semver tags like: v1.2.34 (Ignores pre-release tags)
@@ -57,7 +59,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
-        if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ env.SHOULD_PUSH }}
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -77,19 +79,21 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha
 
-      - name: set version in env
-        run: echo "VERSION=${{ startsWith(github.ref, 'refs/tags/v') && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}" >> "$GITHUB_ENV"
+      - name: set version and revision in env
+        run: |
+          echo "VERSION=${{ env.SHOULD_RELEASE && fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] || '0.0.0' }}" >> "$GITHUB_ENV"
+          echo "REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}" >> "$GITHUB_ENV"
 
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: ${{ fromJSON(env.SHOULD_PUSH) }}
-          sbom: ${{ fromJSON(env.SHOULD_PUSH) }}
+          sbom: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             VERSION=${{ env.VERSION }}
-            REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+            REVISION=${{ env.REVISION }}
           context: ./my-app
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -104,13 +108,15 @@ jobs:
         working-directory: ./charts/my-chart
 
       - name: Update chart values with new image tag
+        if: ${{ env.SHOULD_RELEASE }}
         uses: mikefarah/yq@master
         with:
           cmd: |
             yq eval '.appVersion = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
             yq eval '.version = "${{ env.VERSION }}"' -i charts/my-chart/Chart.yaml
-            
+
       - name: push helm chart to oci
+        if: ${{ env.SHOULD_RELEASE }}
         working-directory: charts
         run: |
           helm package ./${{env.CHART_NAME}}
