--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
     tags: ["v*.*.*"]
   pull_request:
-    branches: ["main", "release-*.*.x"]
+    branches: ["main", "release-*"]
   workflow_dispatch:
 
 env:
